Fix z-index issue when cloning a new environment

--- a/sass/_page-new-env.scss
+++ b/sass/_page-new-env.scss
@@ -46,7 +46,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 3;
+    z-index: 4;
     background: $dblue url(/img/spinner.gif) center no-repeat;
     transition: height .3s;
 }
